--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,34 @@
 group 'com.hczhang.hummingbird'
 version '0.2'
 
-apply plugin: 'java'
+subprojects {
+    apply plugin: 'java'
 
-sourceCompatibility = 1.8
+    ext.spring_version = '4.1.7.RELEASE'
 
-repositories {
-    mavenCentral()
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        // Metrics
+        compile 'io.dropwizard.metrics:metrics-core:3.1.2'
+
+        // Toolkits
+        compile 'com.google.guava:guava:18.0'
+        compile 'org.apache.commons:commons-lang3:3.3.2'
+
+        // Log
+        compile 'org.slf4j:slf4j-api:1.7.12'
+
+        // Joda
+        compile 'joda-time:joda-time:2.7'
+
+        // Test lib
+        testCompile 'org.testng:testng:6.9.4'
+        testCompile 'org.mockito:mockito-core:1.9.5'
+    }
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-}
